--- a/02-android/Astudio/app/src/main/AndroidManifest.xml
+++ b/02-android/Astudio/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.moviles">
 
+
+    <uses-feature android:name="android.hardware.location.gps" android:required="true" />
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -37,7 +39,7 @@
             android:label="@string/title_activity_maps"></activity>
         <activity android:name=".RecyclerVIewActivity" />
         <activity android:name=".HttpActivity" />
-        <activity android:name=".IntentEnviaParametros">
+        <activity android:name=".IntentEnviaParametros" >
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
 
