--- a/examen/app/build.gradle
+++ b/examen/app/build.gradle
@@ -38,4 +38,9 @@ dependencies {
     implementation 'com.beust:klaxon:5.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+
 }
